fix: adjust margin-top on mobile screens

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -3255,8 +3255,8 @@ section {
         gap: 3rem;
         width: 80vw;
         margin: 0 auto;
-        margin-bottom: 600px;
-        margin-top: 3rem;
+        margin-bottom: 37.5rem;
+        margin-top: 6rem;
         height: 50vh;
     }
 
